force-app/main/default/objects/Business_Associate_Master__c/Business_Associate_Master__c.object-meta.xml
<CustomObject>
    <label>Business Associate Master</label>
    <nameField>
        <label>Business Associate Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Associate Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>