force-app/main/default/objects/Business_Associate_Master__c/fields/BAM_ASSOCIATECD__c.field-meta.xml
<CustomField>
    <fullName>BAM_ASSOCIATECD__c</fullName>
    <externalId>true</externalId>
    <label>BAM_ASSOCIATECD</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>