force-app/main/default/objects/Business_Associate_Master__c/fields/BAM_INHOUSE__c.field-meta.xml
<CustomField>
    <fullName>BAM_INHOUSE__c</fullName>
    <label>BAM_INHOUSE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>