force-app/main/default/objects/Business_Associate_Master__c/fields/BAM_STATUS__c.field-meta.xml
<CustomField>
    <fullName>BAM_STATUS__c</fullName>
    <label>BAM_STATUS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>