force-app/main/default/objects/Business_Associate_Master__c/fields/BAM_TYPE__c.field-meta.xml
<CustomField>
    <fullName>BAM_TYPE__c</fullName>
    <label>BAM_TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>INS</fullName>
            </value>
            <value>
                <fullName>USC</fullName>
            </value>
            <value>
                <fullName>EXSRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>